fix "double scrolling" on widths between 900px and 991px

--- a/css/themes/theme/heroes.css
+++ b/css/themes/theme/heroes.css
@@ -7580,7 +7580,7 @@ a.new:visited {
 #mw-fr-confirmreview {
   white-space: normal !important;
 }
-@media (max-width: 900px) {
+@media (max-width: 991px) {
   #mw-fr-confirmreview > :not(script),
   #mw-fr-ratingselects > :not(script) {
     display: block;
